recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: type mismatch;
 found   : Double
 required: Int
      	snowFlake(length/3,snowSide-1)
                        ^